assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        font-synthesis: none;
        text-rendering: optimizeLegibility;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        font-family: 'Nunito', 'Noto Sans', sans-serif;
        -ms-overflow-style: none;
        scrollbar-width: none;
    }

    ::-webkit-scrollbar {
        display: none;
    }

    :root, #__nuxt, body {
        @apply h-full w-full bg-primary-50/80 text-gray-800;
        --glass-reflex-opacity: 0;
    }

}

* {
    @apply selection:bg-gray-800/20;
}

.text-primary {
    @apply selection:bg-primary/20 !important;
}

*, a{
    @apply cursor-none !important;
    -webkit-user-drag: none;
}

p {
    @apply text-xl text-gray-800 mt-2;
}

h2 {
    @apply text-4xl text-primary font-extrabold mb-2;
}

h3, .card-title {
    @apply text-primary font-bold text-2xl;
}

img {
    @apply select-none;
}

.mockup-code {
    --n: 31.3815% 0.021108 254.139175;
    --nc: 74.6477% 0.0216 264.435964;
}

.mockup-code:before {
    box-shadow:
            1.4em 0 0 0 #FE5F57,
            2.8em 0 0 0 #FEBC2E,
            4.2em 0 0 0 #29C940;
    opacity: 1;
}

